# red-level-xcode

./: Cargo.toml  LICENSE  README.md  install  lib.rs  playground.rs  red_level.rs
xcode/: .swiftformat  Makefile  README.md  build.sh  icons.sh
xcode/ElegantTabs/: LICENSE  Package.swift  README.md
xcode/ElegantTabs/Sources/ElegantTabs/: ElegantTabs.swift
xcode/ElegantTabs/Tests/ElegantTabsTests/: ElegantTabsTests.swift
xcode/LoggerHelper/: Package.swift  README.md
xcode/LoggerHelper/Sources/LoggerHelper/: LoggerHelper.swift
xcode/LoggerHelper/Tests/LoggerHelperTests/: LoggerHelperTests.swift
xcode/Red-Level/Lib/swiftyrustlib/Sources/RustyLib/: RustyLib.swift
xcode/rustylib/: Cargo.toml
xcode/rustylib/src/: lib.rs  rustylib.swift  rustylibFFI.h
xcode/swiftyapp/Red-Level.xcodeproj/: project.pbxproj
xcode/swiftyapp/swiftyapp/: ContentView.swift  swiftyappApp.swift
xcode/swiftyapp/swiftyapp.xcodeproj/: project.pbxproj
xcode/swiftyapp/swiftyapp/Assets.xcassets/AppIcon.appiconset/: Contents.json
xcode/trayapp/Lib/swiftyrustlib/: Package.swift
xcode/trayapp/trayapp/: AppIconConfigurator.swift  AppState.swift  EntryAppPoint.swift  Info.plist  MainWindow.swift  PostActionsMustRead.txt  SettingsManager.swift
xcode/trayapp/trayapp.xcodeproj/: project.pbxproj
xcode/trayapp/trayapp/API/: APIConfig.swift
xcode/trayapp/trayapp/Helpers/: GeneralHelpers.swift
xcode/trayapp/trayapp/Resources/Assets.xcassets/AccentColor.colorset/: Contents.json
xcode/trayapp/trayapp/Views/: About.swift
xcode/trayapp/trayapp/Views/Settings/: SettingsTabView.swift  SettingsTabViewModel.swift
xcode/trayapp/trayapp/Views/TabOne/: TabOneView.swift  TabOneViewModel.swift
xcode/trayapp/trayappTests/: trayappTests.swift
xcode/trayapp/trayappUITests/: trayappUITests.swift  trayappUITestsLaunchTests.swift
