[package]
name = "red-level"
version = "1.0.3"
edition = "2021"

[features]
default = []
ctrlc = ["dep:ctrlc"]

[[bin]]
name = "red-level"
path = "red_level.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
ctrlc = { version = "3.4", optional = true }

# Windows-specific system API
[target.'cfg(windows)'.dependencies]
windows = { version = "0.52", features = [
    "Win32_Graphics_Gdi",
    "Win32_UI_ColorSystem",
] }
