[package]
name = "red-level"
version = "1.0.5"
edition = "2021"
description = "Cross-platform software display dimming and RGB channel control"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/red-level"
homepage = "https://gist.github.com/53eb7604caa1fc14194f21ab967cae0e"
repository = "https://gist.github.com/53eb7604caa1fc14194f21ab967cae0e.git"
readme = "README.md"
keywords = ["brightness", "display", "gamma", "rgb", "dimming"]
categories = ["command-line-utilities"]

[features]
default = []
ctrlc = ["dep:ctrlc"]

[[bin]]
name = "red-level"
path = "red_level.rs"

[lib]
name = "red_level"
path = "lib.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
ctrlc = { version = "3.4", optional = true }

# Windows-specific system API
[target.'cfg(windows)'.dependencies]
windows = { version = "0.52", features = [
    "Win32_Graphics_Gdi",
    "Win32_UI_ColorSystem",
] }
