[package]
name = "rustylib"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]
name = "rustylib"

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"

[dependencies]
red-level = { package = "red-level-xcode", version = "1.0.7", path = "../..", features = ["ctrlc"] }
uniffi = { version = "0.28.0", features = [ "cli" ] }

[build-dependencies]
uniffi = { version = "0.28.0", features = [ "build" ] }
